# tauri-plugin-js

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  SKILL.md  blog.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
.repowiki/en/content/: Getting Started Guide.md  System Overview.md
.repowiki/en/content/Architecture/: Architecture Overview.md  Frontend API.md  RPC Communication.md  Rust Plugin.md
.repowiki/en/content/Development/: Development Guide.md  Example Application.md
.repowiki/en/content/Services/: Process Management.md  Runtime Detection.md  Sidecar Support.md
.repowiki/en/meta/: repowiki-metadata.json
examples/deno-compile/: deno.json  main.ts
examples/tauri-app/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-app/backends/: bun-worker.ts  deno-worker.ts  node-worker.mjs  shared-api.ts
examples/tauri-app/scripts/: build-sidecars.sh  build-workers.sh  ensure-resources.sh
examples/tauri-app/src/: App.svelte  app.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: detect_runtimes.toml  get_runtime_paths.toml  kill_all.toml  list_processes.toml  set_runtime_path.toml  write_stdin.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
