[package]
name = "tauri-plugin-js"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-js"

[dependencies]
tauri = { version = "2.10.0" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "time"] }

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
